Revision history for Perl extension Net::IDN::Encode

2.004 (2013-11-03)
	- better documentation for unassigned characters,
	  FIXES: #89750: Can't create IDN for a special domain
	  (reported by felix.*****@*****.de)
	- FIXES: #89270: [PATCH] fix spelling errors in the docs
	  (reported by cstamas@*****.hu)

2.004 (2013-08-12)
	- FIXES: #85552 3 uts46 tests FAIL under perl-5.18.0	
	  (reported by d.thomas@*****.au)

2.003 (2012-01-22)
	- FIXES required version of Unicode::Normalize in UTS46.pm
	  (reported by CPAN testers)

2.002 (2012-01-18)
	- FIXES dependencies/required perl version
	- FIXES: #74021 Makefile.PL bad value for
	  version-requirement

2.001 (2012-01-12)
	- FIXES XS_VERSION mismatch
	- FIXES depencency on Unicode::Normalize (was 1.000 or higher,
	  but this is not needed).

2.000 (2012-01-08)
	- switch to Unicode Technical Standard #46 (previously,
	  IDNA2003 has been used, which is now available as
	  Net::IDN::IDNA2003):
	- add Net::IDN::UTS46 + test vectors from UTS #46
	- remove Net::IDN::Nameprep (only required for IDNA2003)
	- add documentation about IDNA Standards and IDNA module
	  Overview/Roadmad
	- allow NON-LDH labels (e.g. for SRV records), even if
	  UseSTD3Rules=true (parameter now only applies to
	  U-labels and A-labels, i.e. labels that are converted by
	  IDNA).
	- FIXES potential portability problems in
	  Net::IDN::Punycode XS 1.999_20120108
	- FIXES 'wide character' warning with tests if tests
	  fail/if TB2 is used on modern perl installations.
	- FIXES decoding bug in Net::IDN::Punycode::PP (discovered
	  through UTS #46 test vectors)

1.101 (2011-12-08)
	- FIXES: #72615 faulty data in Build.PL causes a lack of
	  meta files, which breaks carton.

1.100 (2010-06-08, patch by Loïc Etienne)
	- new parameters AllowUnassigned/UseSTD3ASCIIRules for
	  to_ascii, to_unicode (RFC 3490)
	  domain_to_ascii, domain_to_unicode
	- case insensitive ACE prefix (RFC 3490)
	- new length 255 check in domain_to_ascii (RFC 1034)